Fix production CORS preflight handling